- Reformatted code - Added MoveSceneService